@@ -2486,9 +2486,33 @@ my_bool mysql_stmt_bind_param(MYSQL_STMT *stmt, MYSQL_BIND *bind) {
 				cursor->inputBind(variable,value);
 				break;
 			}
+			case MYSQL_TYPE_DATE: {
+				MYSQL_TIME	*tm=
+						(MYSQL_TIME *)bind[i].buffer;
+				cursor->inputBind(variable,
+							tm->year,
+							tm->month,
+							tm->day,
+							-1,
+							-1,
+							-1,
+							-1,NULL);
+				break;
+			}
+			case MYSQL_TYPE_TIME: {
+				MYSQL_TIME	*tm=
+						(MYSQL_TIME *)bind[i].buffer;
+				cursor->inputBind(variable,
+							-1,
+							-1,
+							-1,
+							tm->hour,
+							tm->minute,
+							tm->second,
+							0,NULL);
+				break;
+			}
 			case MYSQL_TYPE_TIMESTAMP:
-			case MYSQL_TYPE_DATE:
-			case MYSQL_TYPE_TIME:
 			case MYSQL_TYPE_DATETIME:
 			case MYSQL_TYPE_NEWDATE: {
 				MYSQL_TIME	*tm=
